# fastapi-example

./: .gitignore  README.md  pyproject.toml
client/: index.html
server/: .editorconfig  .travis.yml  README.md  app.py  model.py  requirements.txt
server/config/: log_config.py  log_config.yml
server/db/: fake_db.py
server/tests/: test_app.py
