[tool.poetry]
name = "fastapi-example"
version = "0.1.0"
description = ""
authors = ["f416720001 <f416720001@yahoo.com.tw>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fastapi_example"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
gevent = "^22.10.2"
uvicorn = "^0.20.0"
pyaml = "^21.10.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "user: 使用者API存取",
]